# starter-fastapi-celery

./: .gitignore  README.md  docker-compose-services.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/worker/: __init__.py  celery_app.py  celery_worker.py
docker/api/: Dockerfile
docker/flower/: .env.sample
docker/rabbitmq/: .env.sample  rabbitmq.conf
docker/redis/: Dockerfile
docker/worker/: .env.sample
